--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                                 <div class="form-group img_wrapper" style="">
                                     <label id="img_label" data-toggle="tooltip" data-placement="right" title="Click to add image" for="vmimg"><i class="far fa-plus-square print_hide"></i></label>
                                     <input required id="vmimg" name="image" type="file" onchange="readURL(this);" />
-                                    <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image" style="" class="blah" id="image" src="static/No-Image-Available.png" alt="your image" />
+                                    <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image" style="display: none" class="blah" id="image" src="static/No-Image-Available.png" alt="your image" />
+                                    <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image " style="" class="blah3 print_hide" id="image22" src="static/No-Image-Available.png" alt="your image" />
                                     <small id="emailHelp" style="font-size: 22px;" class="form-text text-muted"></small>
                                 </div>
                             </div>
@@ -101,7 +102,8 @@
                                 <div class="form-group img_wrapper" style="">
                                     <label id="img_label2" data-toggle="tooltip" data-placement="right" title="Click to add image" for="vmimg"><i class="far fa-plus-square print_hide"></i></label>
                                     <input required id="vmimg2" name="image" type="file" onchange="readURL(this);" />
-                                    <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image" style="" class="blah" id="image2" src="static/No-Image-Available.png" alt="your image" />
+                                    <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image" style="display: none" class="blah" id="imaget" src="static/No-Image-Available.png" alt="your image" />
+                                    <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image" style="" class="blah3 print_hide" id="image226" src="static/No-Image-Available.png" alt="your image" />
                                     <small id="emailHelp2" style="font-size: 22px;" class="form-text text-muted"></small>
                                 </div>
                             </div>
