--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 </nav>
-<button style="display: none;" id="returnPage" onclick="showContent()" class="btn btn-outline-danger text-right">Return to edit page</button>
+<button style="display: none; " id="returnPage" onclick="showContent()" class="btn btn-outline-danger text-right">Return to edit page</button>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModalsave" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelsave" aria-hidden="true">
@@ -101,7 +101,7 @@
     <div class="col-sm-12">
         <div class="row py-4">
 
-            <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 p-3 mx-auto bg-whitee receipt_wrapper">
+            <div class="col-sm-12 shadow-lg col-md-12 col-lg-7 col-xl-7 p-3 mx-auto bg-whitee receipt_wrapper">
                 <div id="print_doc" class="row" style="padding: 0 14px;">
                     <div id="right" class="col-sm-12 row mx-auto header_bottom_boder pb-2">
                         <div class="col-sm-12 col-md-6 px-0 py-0  " >
