--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                                         <button id="addrow" class="btn btn-success btn-sm print_hide" data-toggle="tooltip" data-placement="left" title="Add another row"><i class="fas fa-plus-square" ></i> Add row</button>
                                         <div class="custom-control custom-switch print_hide">
                                             <input checked="checked" name="ttt" value="off"  type="checkbox" class="custom-control-input" id="customSwitch1">
-                                            <label class="custom-control-label" for="customSwitch1">on</label>
+                                            <label id="labellll" class="custom-control-label" for="customSwitch1">on</label>
                                         </div>
                                     </td>
                                     <td class="py-0" data-toggle="tooltip" title="Please add all items to the table before you make any tax and discount adjustments" data-placement="top">
                                         <label for="bs_Total" class="no-label"></label>
-                                        <input type="text" class="form-control no-border input_title_sm text-bold-placehoder" id="bs_Total" placeholder="Total: ">
+                                        <input type="text" class="form-control no-border input_title_smn text-bold-placehoder" id="bs_Total" placeholder="Total: ">
 
                                     </td>
                                     <td colspan="2" class="text-bold-custom">
@@ -283,7 +283,7 @@
                                 <tr class="checkbox-click-hide">
                                     <td class="py-0">
                                         <label for="bs_paid_amount" class="no-label"></label>
-                                        <input type="text" class="form-control no-border input_title_sm text-bold-placehoder" id="bs_paid_amount" placeholder="Paid Amount: ">
+                                        <input type="text" class="form-control no-border input_title_smn text-bold-placehoder" id="bs_paid_amount" placeholder="Paid Amount: ">
                                     </td>
                                     <td colspan="2" class="text-bold-custom">
                                         <div class="d-flex align-items-center">
@@ -296,7 +296,7 @@
                                 <tr class="checkbox-click-hide">
                                     <td class="py-0">
                                         <label for="bs_paid_balance" class="no-label"></label>
-                                        <input type="text" class="form-control no-border input_title_sm text-bold-placehoder" id="bs_paid_balance" placeholder="Balance Due: ">
+                                        <input type="text" class="form-control no-border input_title_smn text-bold-placehoder" id="bs_paid_balance" placeholder="Balance Due: ">
                                     </td>
                                     <td colspan="2" class="text-bold-custom">
                                         Ksh <span id="balance_duee">0</span>
