--- a/index.html
+++ b/index.html
@@ -196,17 +196,17 @@
                             <div class="row cloned">
                                 <div class="col-sm-7 text-right pr-0">
                                     <label for="bs_invoice_no" class="no-label"></label>
-                                    <input type="text" class="form-control no-border input_title_sm2 text-right " id="bs_invoice_no" placeholder="Invoice No: ">
+                                    <input type="text" class="form-control no-border input_title_sm2 text-right " id="bs_invoice_no" placeholder="Invoice No:">
                                 </div>
                                 <div class="col-sm-5 text-right pr-0 pl-0">
                                     <label for="bs_invoice_no_text" class="no-label"></label>
-                                    <input type="text" class="form-control no-border input_title_sm22 text-right" id="bs_invoice_no_text" placeholder="Invoice Number: ">
+                                    <input type="text" class="form-control no-border input_title_sm22 text-right" id="bs_invoice_no_text" placeholder="Invoice Number">
                                 </div>
                             </div>
                             <div class="row cloned">
                                 <div class="col-sm-7 text-right pr-0">
                                     <label for="bs_datw" class="no-label"></label>
-                                    <input type="text" class="form-control no-border input_title_sm2 text-right" id="bs_datw" placeholder="Date: ">
+                                    <input type="text" class="form-control no-border input_title_sm2 text-right" id="bs_datw" placeholder="Date:">
                                 </div>
                                 <div class="col-sm-5 text-right pr-0 pl-0">
                                     <label for="bs_date_no_text" class="no-label"></label>
