--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td id="total_border" class="totat-print-border rrr" colspan="3" rowspan="4">
+                                    <td style="border-bottom-color: #ffffff;border-left-color: #ffffff;border-top-color: #ffffff" id="total_border" class="totat-print-border rrr" colspan="3" rowspan="4">
                                         <button id="addrow" class="btn btn-success btn-sm print_hide" data-toggle="tooltip" data-placement="left" title="Add another row"><i class="fas fa-plus-square" ></i> Add row</button>
                                         <div class="custom-control custom-switch print_hide">
                                             <input checked="checked" name="ttt" value="off"  type="checkbox" class="custom-control-input" id="customSwitch1">
