--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item px-1">
+                    <a onclick="finalltaxdiscountmath();"  class="nav-link btn btn-sm btn-info text-white" >Recalculate Total</a>
+                </li>
+                <li class="nav-item px-1">
                     <a type="button"  data-toggle="modal" data-target="#exampleModal" class="nav-link btn btn-sm btn-info text-white"  href="#">Add Tax </a>
                 </li>
                 <li class="nav-item px-1">
