--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     </div>
                     <div class="col-sm-12 row mx-auto py-2">
                         <span class="text-left w-100 border-bottom">Notes / Terms</span>
-                        <div style="min-height: 300px" class="w-100 text-left" id="validationTextarea">
+                        <div style="min-height: 400px" class="w-100 text-left" id="validationTextarea">
 
                         </div>
 
@@ -387,6 +387,7 @@
                                     <div class="form-group">
                                         <label for="tax_name">Name</label>
                                         <input type="text" class="form-control" id="tax_name" placeholder="Name">
+                                        <small class="text-muted">Dont use same names</small>
                                     </div>
                                     <div class="form-group">
                                         <label for="tax_input">Tax</label>
@@ -555,7 +556,7 @@
 <!-- Optional JavaScript -->
 <!--<script src="https://cdn.ckeditor.com/ckeditor5/19.1.1/inline/ckeditor.js"></script>-->
 <!--<script type="module" src="node_modules/@ckeditor/ckeditor5-font/src/fontfamily.js"></script>-->
-<script type="text/javascript" src="static/ck.js" ></script>
+<script src="static/ck.js" type="text/javascript" ></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script type="text/javascript" src="static/jquery351.js"></script>
 <script type="text/javascript" src="static/popper.js"></script>
